--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -9,16 +9,16 @@
 {% block homebanner %}
   <section class="mt-5">
     <div class="container">
-      <h1 class="primary-h1 text-center">About Old Scool</h1>
+      <h1 class="primary-h1 text-center">About Oldscool</h1>
       <div class="row">
         <div class="col-md-4 text-justify">
-          <p>The Old School, located in the heart of Kannur, Kerala—often referred to as the “Land of Spices”—serves as a dynamic platform for nurturing local entrepreneurs and talents. This organization is dedicated to creating opportunities for individuals to showcase their skills and advance their careers. By offering various programs, workshops, and events, The Old School aims to foster a supportive community where creativity and innovation can flourish.</p>
+          <p>The Oldscool, located in the heart of Kannur, Kerala—often referred to as the “Land of Spices”—serves as a dynamic platform for nurturing local entrepreneurs and talents. This organization is dedicated to creating opportunities for individuals to showcase their skills and advance their careers. By offering various programs, workshops, and events, The Oldscool aims to foster a supportive community where creativity and innovation can flourish.</p>
         </div>
         <div class="col-md-4 text-justify">
-          <p>The organization collaborates with experienced mentors and industry experts to provide valuable guidance and resources to budding entrepreneurs. Additionally, The Old School emphasizes the importance of cultural heritage and sustainable practices, ensuring that local traditions and values are preserved while embracing modern advancements.</p>
+          <p>The organization collaborates with experienced mentors and industry experts to provide valuable guidance and resources to budding entrepreneurs. Additionally, The Oldscool emphasizes the importance of cultural heritage and sustainable practices, ensuring that local traditions and values are preserved while embracing modern advancements.</p>
         </div>
         <div class="col-md-4 text-justify">
-          <p>Through its initiatives, The Old School not only contributes to the personal and professional growth of its members but also plays a significant role in the economic and social development of the Kannur region. Whether it’s through artisanal crafts, culinary arts, or technological innovations, The Old School is committed to empowering the local population and promoting a vibrant, self-sustaining community.</p>
+          <p>Through its initiatives, The Oldscool not only contributes to the personal and professional growth of its members but also plays a significant role in the economic and social development of the Kannur region. Whether it’s through artisanal crafts, culinary arts, or technological innovations, The Oldscool is committed to empowering the local population and promoting a vibrant, self-sustaining community.</p>
         </div>
       </div>
     </div>
