--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -82,7 +82,7 @@
               <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                 <!-- Content -->
                 <h6 class="text-uppercase fw-bold mb-4"><i class="fa-solid fa-location-dot me-3"></i>Oldscool</h6>
-                <p>We are an Entrepreneur's space and service center located in kannur working for the ehancement of buisness in the local area</p>
+                <p>We are an entrepreneurial space and service center focused on advancing local startups and businesses in various locales</p>
               </div>
               <!-- Grid column -->
 
@@ -117,7 +117,7 @@
                 <!-- Links -->
                 <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
                 <p>
-                  <i class="fas fa-home me-3"></i>Oldscool Trichambaram, Taliparamba, Kerala 670141
+                  <i class="fas fa-home me-3"></i>Oldscool, Trichambaram, Taliparamba, Kerala 670141
                 </p>
                 <p>
                   <i class="fas fa-envelope me-3"></i>
