--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -9,7 +9,7 @@
 {% block homebanner %}
   <section class="mt-5">
     <div class="container">
-      <h2 class="text-center primary-h1">Contact US</h2>
+      <h2 class="text-center primary-h1">Contact Us</h2>
       <div class="row">
         <div class="col-md-6">
           <!-- Google map embeded -->
