--- a/home/templates/nav.html
+++ b/home/templates/nav.html
@@ -2,10 +2,12 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container p-0">
     <a class="navbar-brand" href="#"></a>
+    <img src="{% static 'images/primarylogo.svg' %}" alt="site logo" width="200px" class="responsive-image" id="abc"/>
+   
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <!-- logo starts -->
-      <img src="{% static 'images/primarylogo.svg' %}" alt="site logo" width="200px" />
+      {% comment %} <img src="{% static 'images/primarylogo.svg' %}" alt="site logo" width="200px" /> {% endcomment %}
       <!-- logo ends -->
       <ul class="navbar-nav">
         <li class="nav-item">
