--- a/localproj/templates/add_project.html
+++ b/localproj/templates/add_project.html
@@ -19,6 +19,13 @@
             <h2 class="secondary-h1 visible d-flex justify-content-center w-100">Register a New Project</h2>
             <p class="text-center">Complete the form below to register a new project and get support</p>
           </div>
+          {% if messages %}
+            <div class="container mt-3">
+              {% for message in messages %}
+                <li class="alert alert-{{ message.tags }}" role="alert" style="list-style: none;">{{ message }}</li>
+              {% endfor %}
+            </div>
+          {% endif %}
           {% for field in form %}
             <div class="mb-3">
               <label for="{{ field.id_for_label }}" class="form-label">
